--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,15 +45,19 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Prepare Shopware assets (no DB)
+      - name: Build assets without DB (CI mode)
         run: |
-          INSTALL=1 php bin/console bundle:dump
-          INSTALL=1 php bin/console assets:install --no-interaction
+          export APP_ENV=prod
+          export CI=1
+          export INSTALL=1
+          export DATABASE_URL="mysql://user:pass@127.0.0.1:3306/dummy?charset=utf8mb4"
+          export MAILER_DSN="null://null"
+          export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 
-      - name: Build storefront & admin (no DB)
-        run: |
+          php bin/ci bundle:dump
           ./bin/build-storefront.sh
           ./bin/build-administration.sh
+          CI=1 php bin/ci assets:install --no-interaction
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -151,16 +155,24 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H ${{ vars.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Run DB migrations
+      - name: Run Deployment Helper
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} \
-            "cd ${{ vars.DEPLOY_PATH }}/current && ${{ vars.PHP_BINARY }} bin/console database:migrate --all --no-interaction"
-
+          ssh -o StrictHostKeyChecking=no ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} "
+            cd ${{ vars.DEPLOY_PATH }}/current && \
+            ${{ vars.PHP_BINARY }} vendor/bin /shopware-deployment-helper run
+          "
+      - name: Database migrations
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} "
+            cd ${{ vars.DEPLOY_PATH }}/current && \
+            ${{ vars.PHP_BINARY }} bin/console database:migrate --all --no-interaction
+          "
       - name: Rebuild container & caches
         run: |
           ssh -o StrictHostKeyChecking=no ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} \
             "cd ${{ vars.DEPLOY_PATH }}/current && \
-             ${{ vars.PHP_BINARY }} theme:compile --no-interaction && \
-             ${{ vars.PHP_BINARY }} bin/console cache:clear && \
-             ${{ vars.PHP_BINARY }} bin/console cache:warmup && \
-             ${{ vars.PHP_BINARY }} bin/console dal:refresh:index || true"
+            ${{ vars.PHP_BINARY }} bin/console theme:refresh || true
+            ${{ vars.PHP_BINARY }} bin/console cache:clear
+            ${{ vars.PHP_BINARY }} bin/console cache:warmup
+            ${{ vars.PHP_BINARY }} bin/console dal:refresh:index || true
+          "
