--- a/shopware/.env.prod
+++ b/shopware/.env.prod
@@ -1,8 +1,8 @@
-APP_SECRET=___APP_SECRET___
+APP_SECRET=###APP_SECRET###
 APP_URL=https://shop.rkw-kompetenzzentrum.de
-DATABASE_URL=mysql://___DB_USER___:___DEB_PASSWORD___@___DB_HOST___:3306/___DB_DATABASE___
-COMPOSER_HOME=___DEPLOY_PATH___/var/cache/composer
-INSTANCE_ID=___INSTANCE_ID___
+DATABASE_URL=mysql://###DB_USER###:###DEB_PASSWORD###@###DB_HOST###:3306/###DB_DATABASE###
+COMPOSER_HOME=###DEPLOY_PATH###/var/cache/composer
+INSTANCE_ID=###INSTANCE_ID###
 BLUE_GREEN_DEPLOYMENT=1
 OPENSEARCH_URL=http://localhost:9200
 ADMIN_OPENSEARCH_URL=http://localhost:9200
