[FIX] deployment script

--- a/shopware/.env.prod
+++ b/shopware/.env.prod
@@ -1,6 +1,6 @@
 APP_SECRET=___APP_SECRET___
 APP_URL=https://shop.rkw-kompetenzzentrum.de
-DATABASE_URL=mysql://___DB_USER___:___DEB_PASSWORD___@___DB_HOST___:3306/___DB_DATABASE___
+DATABASE_URL=mysql://___DB_USER___:___DB_PASSWORD___@___DB_HOST___:3306/___DB_NAME___
 COMPOSER_HOME=___DEPLOY_PATH___/var/cache/composer
 INSTANCE_ID=___INSTANCE_ID___
 BLUE_GREEN_DEPLOYMENT=1
