--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -86,6 +86,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
+          path: shopware
 
       - name: Replace placeholders in config
         run: |
