--- a/shopware/composer.json
+++ b/shopware/composer.json
@@ -3,10 +3,10 @@
     "type": "project",
     "require": {
         "composer-runtime-api": "^2.0",
-        "shopware/administration": "*",
-        "shopware/core": "v6.7.1.2",
-        "shopware/elasticsearch": "*",
-        "shopware/storefront": "*",
+        "shopware/administration": "6.7.3.0",
+        "shopware/core": "6.7.3.0",
+        "shopware/elasticsearch": "6.7.3.0",
+        "shopware/storefront": "6.7.3.0",
         "swag/paypal": "10.1.0",
         "symfony/flex": "~2"
     },
@@ -38,10 +38,10 @@
             "App\\": "src/"
         }
     },
-    "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
         "allow-plugins": {
+            "php-http/discovery": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
