--- a/shopware/.env
+++ b/shopware/.env
@@ -16,11 +16,11 @@
 
 ###> shopware/core ###
 APP_ENV=prod
-APP_URL=http://127.0.0.1:8000
-APP_SECRET=ac2f25ad57854e9862b0ec32835fb1ea
-INSTANCE_ID=3c3bb410573ec1b339fba18abb328056
+APP_URL=
+APP_SECRET=
+INSTANCE_ID=
 BLUE_GREEN_DEPLOYMENT=0
-DATABASE_URL=mysql://root:root@localhost/shopware
+DATABASE_URL=
 ###< shopware/core ###
 
 ###> shopware/elasticsearch ###
